[package]
name = "memebot_warp"
version = "0.1.0"
authors = ["imDema <luca.de.martini@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = {version = "0.2", features =  [ "macros", "rt-threaded" ] }
memebot_backend = { path = "../memebot_backend" }
lazy_static = "1.4"
pretty_env_logger = "0.4"

[profile.release]
lto = true

[[bin]]
name = "memebot_warp"
path = "src/main.rs"